Improve telemetry equipment targeting and deploy checks